--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation project(path: ':JS-CloudMessaging')
-    implementation project(path: ':JS-CloudMessaging')
+    implementation 'com.github.JerrySJoseph:JS-Cloud-SDK-Android:v1.0.0'
 
     //Notification Provider Library
     implementation 'com.github.JerrySJoseph:NotificationProvider:v1.0.2-stable'
