--- a/JS-Auth/build.gradle
+++ b/JS-Auth/build.gradle
@@ -32,6 +32,20 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
+
+    //Socket.io
+    implementation ('io.socket:socket.io-client:2.0.0') {
+        exclude group: 'org.json', module: 'json'
+    }
+
+    //GSON
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    //Google Auth
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    implementation project(path: ':JSCloud-core')
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
