--- a/JS-CloudMessaging/src/main/AndroidManifest.xml
+++ b/JS-CloudMessaging/src/main/AndroidManifest.xml
@@ -3,4 +3,8 @@
     package="com.example.js_cloudmessaging">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <application
+        android:usesCleartextTraffic="true">
+
+    </application>
 </manifest>
