--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     implementation 'com.github.JerrySJoseph:NotificationProvider:v1.0.2-stable'
     implementation project(path: ':JSCloud-core')
     implementation project(path: ':JS-Auth')
-
+//GSON
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
