--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 
     //GSON
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation project(path: ':JS-CloudMessaging')
+    implementation project(path: ':JS-DynamicDatabase')
 
 
     testImplementation 'junit:junit:4.+'
